--- a/weather project.html
+++ b/weather project.html
@@ -12,6 +12,28 @@
             <input type="text" placeholder="Enter a city" spellcheck="true">
             <button><img src="images/search.png" alt=""></button>
         </div>
+        <div class="weather">
+            <img src="images/rain.png" class="weather-icon">
+            <h1 class="temp">22°c</h1>
+            <h2 class="city">Lagos</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="images/humidity.png" alt="">
+                    <div class="rel">
+                        <p class="humidity"> 50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+            
+            <div class="col">
+                    <img src="images/wind.png" alt="">
+                    <div class="rel">
+                        <p class="wind"> 15 km/h</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 <script src="weather project.js"></script>
