--- a/weather project.html
+++ b/weather project.html
@@ -36,5 +36,7 @@
         </div>
     </div>
 </body>
-<script src="weather project.js"></script>
+<script src="weather project.js">
+   
+</script>
 </html>
