--- a/weather project.html
+++ b/weather project.html
@@ -9,18 +9,18 @@
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" placeholder="Enter a city" spellcheck="true">
-            <button><img src="images/search.png" alt=""></button>
+            <input type="text" class="sea" placeholder="Enter a city" spellcheck="true">
+            <button class="button"><img src="images/search.png" alt=""></button>
         </div>
         <div class="weather">
             <img src="images/rain.png" class="weather-icon">
-            <h1 class="temp">22°c</h1>
-            <h2 class="city">Lagos</h2>
+            <h1 class="temp"></h1>
+            <h2 class="city"></h2>
             <div class="details">
                 <div class="col">
                     <img src="images/humidity.png" alt="">
                     <div class="rel">
-                        <p class="humidity"> 50%</p>
+                        <p class="humidity"> </p>
                         <p>Humidity</p>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
             <div class="col">
                     <img src="images/wind.png" alt="">
                     <div class="rel">
-                        <p class="wind"> 15 km/h</p>
+                        <p class="wind"> </p>
                         <p>Wind Speed</p>
                     </div>
                 </div>
