--- a/weather project.html
+++ b/weather project.html
@@ -12,13 +12,17 @@
             <input type="text" class="sea" placeholder="Enter a city" spellcheck="true">
             <button class="button"><img src="images/search.png" alt=""></button>
         </div>
+        <div class="error">
+            <p>Invalid city name</p>
+
+        </div>
         <div class="weather">
             <img src="images/rain.png" class="weather-icon">
             <h1 class="temp"></h1>
             <h2 class="city"></h2>
             <div class="details">
                 <div class="col">
-                    <img src="images/humidity.png" alt="">
+                    <img src="images/humidity.png" class="weather-icon" alt="">
                     <div class="rel">
                         <p class="humidity"> </p>
                         <p>Humidity</p>
